--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
   color-scheme: dark;
 
   /* Midnight Colors */
-  --midnight: #0D1117;
+  --midnight: #020202;
   --midnight-98: #181C22;
   --midnight-95: #191D23;
   --midnight-90: #25292E;
